dashboard/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homepage
spec:
  serviceName: homepage
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
      - name: homepage
        image: ghcr.io/benphelps/homepage:v0.6.17
        ports:
          - containerPort: 80
            name: http
        volumeMounts:
        - name: homepage-data
          mountPath: /app/config
  volumeClaimTemplates:
  - metadata:
      name: homepage-data
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: longhorn
      resources:
        requests:
          storage: 1Gi
