dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  labels:
    app: homepage
spec:
  ports:
  - port: 3000
    name: http
  clusterIP: None
  selector:
    app: homepage
